--- a/index.css
+++ b/index.css
@@ -100,6 +100,7 @@
    .tooltip2 {
     display: flex;
   }
+
 }
 
 @media all and (max-width: 700px) {
@@ -353,7 +354,12 @@ p.chanel {
   text-align: center;
   margin-top: 20px;
   font-size: 19px;
-
+  max-width: 210px;
+  margin: auto;
+  margin-top: 20px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 p.chanel::before {
